syntax = "proto3";

service Common {
  rpc WalletBalance(WalletBalanceRequest) returns (WalletBalanceResponse) {}
  rpc NewAddress(NewAddressRequest) returns (NewAddressResponse) {}
  rpc Send(SendRequest) returns (SendResponse) {}
}

message WalletBalanceRequest {}
message WalletBalanceResponse {
  uint64 balanceSats = 1;
}

message NewAddressRequest {}
message NewAddressResponse {
  string address = 1;
}

message SendRequest {
  string address = 1;
  uint64 amount = 2;
}
message SendResponse {
  string txId = 1;
}
